seaqt/QtMultimediaWidgets/gen_qvideowidgetcontrol.h

class QMetaObject;
class QVideoWidgetControl;
class QWidget;
typedef struct QMetaObject QMetaObject;
typedef struct QVideoWidgetControl QVideoWidgetControl;
typedef struct QWidget QWidget;
QMetaObject* QVideoWidgetControl_metaObject(const QVideoWidgetControl* self);
void* QVideoWidgetControl_metacast(QVideoWidgetControl* self, const char* param1);
int QVideoWidgetControl_metacall(QVideoWidgetControl* self, int param1, int param2, void** param3);
struct seaqt_string QVideoWidgetControl_tr(const char* s);
struct seaqt_string QVideoWidgetControl_trUtf8(const char* s);
QWidget* QVideoWidgetControl_videoWidget(QVideoWidgetControl* self);
int QVideoWidgetControl_aspectRatioMode(const QVideoWidgetControl* self);
void QVideoWidgetControl_setAspectRatioMode(QVideoWidgetControl* self, int mode);
bool QVideoWidgetControl_isFullScreen(const QVideoWidgetControl* self);
void QVideoWidgetControl_setFullScreen(QVideoWidgetControl* self, bool fullScreen);
int QVideoWidgetControl_brightness(const QVideoWidgetControl* self);
void QVideoWidgetControl_setBrightness(QVideoWidgetControl* self, int brightness);
int QVideoWidgetControl_contrast(const QVideoWidgetControl* self);
void QVideoWidgetControl_setContrast(QVideoWidgetControl* self, int contrast);
int QVideoWidgetControl_hue(const QVideoWidgetControl* self);
void QVideoWidgetControl_setHue(QVideoWidgetControl* self, int hue);
int QVideoWidgetControl_saturation(const QVideoWidgetControl* self);
void QVideoWidgetControl_setSaturation(QVideoWidgetControl* self, int saturation);
void QVideoWidgetControl_fullScreenChanged(QVideoWidgetControl* self, bool fullScreen);
void QVideoWidgetControl_connect_fullScreenChanged(QVideoWidgetControl* self, intptr_t slot, void (*callback)(intptr_t, bool), void (*release)(intptr_t));
void QVideoWidgetControl_brightnessChanged(QVideoWidgetControl* self, int brightness);
void QVideoWidgetControl_connect_brightnessChanged(QVideoWidgetControl* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QVideoWidgetControl_contrastChanged(QVideoWidgetControl* self, int contrast);
void QVideoWidgetControl_connect_contrastChanged(QVideoWidgetControl* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QVideoWidgetControl_hueChanged(QVideoWidgetControl* self, int hue);
void QVideoWidgetControl_connect_hueChanged(QVideoWidgetControl* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QVideoWidgetControl_saturationChanged(QVideoWidgetControl* self, int saturation);
void QVideoWidgetControl_connect_saturationChanged(QVideoWidgetControl* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
struct seaqt_string QVideoWidgetControl_tr2(const char* s, const char* c);
struct seaqt_string QVideoWidgetControl_tr3(const char* s, const char* c, int n);
struct seaqt_string QVideoWidgetControl_trUtf82(const char* s, const char* c);
struct seaqt_string QVideoWidgetControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QVideoWidgetControl_staticMetaObject();